# bengal-tools

./: .gitignore
.github/workflows/: deploy.yml
bengal-intellij/: build.gradle.kts  settings.gradle.kts
bengal-zed/: extension.toml
bengal-zed/grammars/: bengal.toml
bengal-zed/grammars/bengal/: grammar.js
bengal-zed/languages/bengal/: config.toml
bengal-zed/languages/bengal/queries/: highlights.scm  indents.scm  outlines.scm
vs-code/syntaxes/: Bengal.tmLanguage.json
web/: Cargo.toml  index.html
web/godbolt-dev/: frontend.html
web/godbolt-dev/src/: main.rs
web/src/: bytecode_viewer.rs  main.rs
