[package]
name = "bengal-godbolt"
version = "0.1.0"
edition = "2021"
description = "Godbolt-like compiler explorer for Bengal language"

[workspace]

[dependencies]
bengal-compiler = { git = "https://github.com/Nelonn/bengal", subdirectory = "compiler" }
sparkler = { git = "https://github.com/Nelonn/bengal", subdirectory = "sparkler" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
